# rust-store

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose-db.yaml  stage-hand.js
migrations/2025-08-25-172023_create_products/: down.sql  up.sql
migrations/2025-08-25-172035_create_product_variants/: down.sql  up.sql
migrations/2025-08-25-172042_create_product_media/: down.sql  up.sql
migrations/2025-08-25-172046_create_product_categories/: down.sql  up.sql
migrations/2025-08-25-172101_create_product_attribute/: down.sql  up.sql
migrations/2025-08-25-172428_create_product_category_junction/: down.sql  up.sql
src/: config.rs  lib.rs  main.rs  schema.rs
src/data/: mod.rs
src/database/: connection.rs
src/domain/: mod.rs
src/handlers/: media_loader.rs  mod.rs  products.rs  queries.rs  variant_loader.rs
src/models/: mod.rs
src/routes/: mod.rs
