[package]
name = "rust-store"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.4"
async-graphql = { version = "7.0.11", features = ["dataloader"] }
async-graphql-axum = "7.0.11"
bigdecimal = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.12", features = [
    "postgres",
    "chrono",
    "serde_json",
    "numeric",
] }
diesel-async = { version = "0.6.1", features = ["deadpool", "postgres"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.41", features = ["serde"] }
tower = { version = "0.5.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
envconfig = "0.11.0"
uuid = { version = "1.18.0", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "time",
    "derive",
    "macros",
    "rust_decimal",
] }
rust_decimal = "1.35"
